argocd/manifests/myip/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myip
  namespace: myip
  labels:
    app: myip
    app.kubernetes.io/name: myip
spec:
  type: ClusterIP
  selector:
    app: myip
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
